--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="sec-01">
         <div class="container">
-            <h2 class="main-title">English Class Bebandem</h2>
+            <h2 class="main-title">Project Dua Belas Tiga</h2>
             <div class="content">
                 <div class="image">
                     <img src="png1.png" alt="">
