--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="png1.png" alt="">
                 </div>
                 <div class="text-box">
-                    <h3>English Class Bebandem</h3>
+                    <h3>Project Dua Belas Tiga 2025</h3>
                     <p>English Class Bebandem (ECB) adalah sebuah organisasi yang didirikan oleh Mr. Ketut, terletak di sebelah JFC Bebandem. Anggota ECB terdiri dari siswa dan siswi dari berbagai sekolah dan kampus di Karangasem. Di sini, kita belajar bahasa Inggris dan keterampilan pariwisata. Kami memanfaatkan waktu sebaik mungkin dengan mengadakan pembelajaran setiap hari Sabtu, Minggu, atau hari libur.</p>
                 </div>
             </div>
