--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3 class="section-title">Tentang</h3>
             <div class="content">
                 <div class="image">
-                    <img src="middle.png" alt="">
+                    <img src="pict1.png.jpg" alt="">
                 </div>
                 <div class="info">
                     <h4 class="info-title">Detail</h4>
