--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2 class="main-title">Project Dua Belas Tiga</h2>
             <div class="content">
                 <div class="image">
-                    <img src="png1.png" alt="">
+                    <img src="pict2.webp" alt="">
                 </div>
                 <div class="text-box">
                     <h3>Project Dua Belas Tiga 2025</h3>
