--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 </div>
                 <div class="text-box">
                     <h3>Project Dua Belas Tiga 2025</h3>
-                    <p>English Class Bebandem (ECB) adalah sebuah organisasi yang didirikan oleh Mr. Ketut, terletak di sebelah JFC Bebandem. Anggota ECB terdiri dari siswa dan siswi dari berbagai sekolah dan kampus di Karangasem. Di sini, kita belajar bahasa Inggris dan keterampilan pariwisata. Kami memanfaatkan waktu sebaik mungkin dengan mengadakan pembelajaran setiap hari Sabtu, Minggu, atau hari libur.</p>
+                    <p>Pada proyek kali ini, kelas kami memilih tema tentang teknologi, dengan fokus pada pengembangan dan pemanfaatan website. Kami akan mengeksplorasi berbagai aspek, seperti desain web, pengembangan front-end dan back-end, keamanan siber, serta bagaimana website dapat digunakan secara efektif untuk berbagai keperluan, mulai dari bisnis hingga edukasi.
+
+Selain itu, kami juga akan mempelajari berbagai teknologi dan bahasa pemrograman yang digunakan dalam pembuatan website, seperti HTML, CSS, JavaScript, dan framework populer lainnya. Kami juga akan membahas tren terbaru dalam pengembangan web, seperti website responsif, optimasi SEO, serta integrasi dengan kecerdasan buatan dan teknologi cloud. Dengan proyek ini, kami berharap dapat memahami lebih dalam tentang peran website dalam dunia digital serta mengasah keterampilan praktis dalam pengembangannya.</p>
                 </div>
             </div>
             <div class="media-icons">
