--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <section class="sec-01">
         <div class="container">
-            <h2 class="main-title">Project Dua Belas Tiga</h2>
+            <h2 class="main-title">WEB PROJECT</h2>
             <div class="content">
                 <div class="image">
-                    <img src="pict2.webp" alt="">
+                    <img src="judul.jpg" alt="">
                 </div>
                 <div class="text-box">
                     <h3>Project Dua Belas Tiga 2025</h3>
