--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@ Selain itu, kami juga akan mempelajari berbagai teknologi dan bahasa pemrograman
     </section>
     <section class="sec-02">
         <div class="container">
-            <h3 class="section-title">Tentang</h3>
+            <h3 class="section-title">HASIL PROJECT DUA BELAS TIGA</h3>
             <div class="content">
                 <div class="image">
                     <img src="pict1.png.jpg" alt="">
                 </div>
                 <div class="info">
-                    <h4 class="info-title">Detail</h4>
+                    <h4 class="info-title">Detail Project</h4>
                     <p>Di ECB, terdapat beberapa tingkatan belajar yang dimulai dari tingkat basic, lalu naik ke tingkat selanjutnya belajar bersama Mr. Ketut. Di sana ada yang namanya perintis asisten dosen (asdos), dan yang terakhir adalah asdos. Metode pembelajaran yang digunakan bervariasi sesuai dengan tingkatannya. Untuk tingkat atas, fokusnya adalah pada percakapan (conversation) dan pencatatan kosa kata baru. Mereka juga belajar tentang destinasi wisata dan memberikan pidato (speech). Sedangkan untuk tingkat basic, pembelajaran dimulai dari nol, seperti belajar alfabet, angka, kosakata sehari-hari, bulanan, dan lainnya.
 
                         Asdos bertugas mengajar materi basic atau materi pariwisata lainnya. Untuk perintis asdos, tugasnya sama dengan asdos, namun setiap kali mengajar masih diawasi oleh asdos. Materi pariwisata yang telah dipelajari di ECB mencakup:
