--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Selain itu, kami juga akan mempelajari berbagai teknologi dan bahasa pemrograman
             <h3 class="section-title">HASIL PROJECT DUA BELAS TIGA</h3>
             <div class="content">
                 <div class="image">
-                    <img src="tryy.PNG" alt="">
+                    <img src="tryy.png" alt="">
                 </div>
                 <div class="info">
                     <h4 class="info-title">Detail Project</h4>
